# SO-101_Hackathon

./: README.md  README.txt  humidity  humidity.py  sensor_according_to_rate.py  test_integration.py
Images/: desktop.ini
example_so101/: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cSpell.json  environment.yaml  example_lerobot_so101_dictionary.txt  so101_controller.py  test_neuracore.py
example_so101/examples/: 1_leader_arm_teleop_so101.py  2_collect_teleop_data_with_neuracore.py  camera_test.py  main.py  mainFINAL.py  move_robot.py  move_robot_to_xy.py  move_to_sock.py  move_to_xy.py  objectDetect.py  play_poses.py  poses.json  record_poses.py  sensor_according_to_rate.py  sock_calibrate.py
example_so101/scripts/: test_camera_thread.py  viser_so100_control.py
example_so101/so101_description/: robot.urdf
example_so101/tests/: test_humidity_source.py  test_sts3215_bus.py
neuracore/: .bumpversion.cfg  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  cSpell.json  neuracore-dictionary.txt  setup.py
neuracore/.github/: pull_request_template.md
neuracore/docs/: commandline.md  contribution_guide.md  data_daemon.md  dataset_importer.md  environment_variable.md  model_construction.md  training.md  tutorial.md
neuracore/examples/: README.md  (+9 more)
neuracore/examples/ros_example/: Dockerfile  README.md  entrypoint.sh  package.xml  setup.py
neuracore/examples/ros_example/launch/: data_collection.py  prediction.py
neuracore/examples/ros_example/ros_example/: const.py  data_logger_node.py  simulation_node.py  simulation_node_prediction.py
(+371 files in other folders)
